Fixed navigation sizing errors and the home page letter spacing! (about time)

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@
 body {
   min-height: 100vh;
   background-color: #E6E6E9;
+  margin: 0;
+}
+#world {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .header {
